# fastapi_backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup_keys.py  test.html  test.py  test_consumer.py  test_consumer_spam.py  test_kyc_consumer.py  test_producer.py
.github/workflows/: deploy.yaml
alembic/: env.py
app/: __init__.py  celery_app.py  tasks.py
app/core/: config.py  session_manager.py
app/core/base/: base_broker.py  base_repository.py
app/core/rabbit/: __init__.py  base.py
app/core/rabbit/common/: __init__.py  email_updates_rabbit.py
app/dependencies/: results.py
app/keywords/: crud.py  model.py  schemas.py  service.py  view.py
app/monstro_settings/: view.py
app/profiles/: crud.py  schemas.py  service.py  sheduler.py  utils.py  view.py
app/results/: crud.py  model.py  schemas.py  service.py  sheduler.py  views.py
app/stats/: crud.py  model.py  schemas.py  service.py  views.py
app/utils/: logging_tools.py  setup_logging.py  telegram_bot.py
