[project]
name = "webmonstro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "apscheduler>=3.11.0",
    "asgiref>=3.8.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "celery[redis]>=5.5.2",
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "gevent>=25.5.1",
    "matplotlib>=3.10.1",
    "orjson>=3.10.16",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
